--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,7 @@ numpy
 pandas
 plotly
 openpyxl<=3.1.0 # Don't use 3.1.1 (see https://stackoverflow.com/questions/75471318/readonlyworksheet-object-has-no-attribute-defined-names)
+dash
+dash-bootstrap-components
+dash-bootstrap-templates
+numerize
